--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   padding: 1rem;
   border-radius: 1rem;
   cursor: pointer;
+  width: 350px;
   transition: 0.115s;
 }
 
@@ -26,7 +27,24 @@
 
 .card > img {
   border-radius: 1rem;
-  max-width: 100%;
+  width: 100%;
   height: 200px;
   object-fit: cover;
+}
+
+.tags {
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.tags > .tag {
+  padding: 0.25rem 0.5rem;
+  background: #FFFFFF;
+  color: #000000;
+  border-radius: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-right: 1rem;
 }
